Collapse all for Sorting page will go to first level instead of root and fixing the look and feel of left menu of page

--- a/uat-web-app/static/css/sorting.css
+++ b/uat-web-app/static/css/sorting.css
@@ -6,14 +6,14 @@ html {
     z-index: 10;
     width: auto;
     height: auto;
-    max-height: 100%;
-    max-width: 23.75rem;
+    max-height: 99%;
     position: absolute;
     top: 0.3rem;
     left: 0.3rem;
-
-    /* bottom: 5px;
-    right: 5px; */
+    background-color: rgb(255 255 255 / 70%);
+    border-radius: 1.6rem;
+    padding: 1.3rem 0.6rem;
+    max-width: 22.5rem;
     overflow-y: auto;
 }
 
@@ -63,6 +63,25 @@ html {
   background-color: #036 !important;
   border-color: #036 !important;
   color: #fff !important;
+}
+
+.or-divider {
+    text-align: center;
+    margin: 1rem 0;
+    font-weight: bold;
+    color: #888;
+    position: relative;
+}
+
+.or-divider::before,
+.or-divider::after {
+    content: "";
+    display: inline-block;
+    width: 40%;
+    height: 1px;
+    background: #ccc;
+    vertical-align: middle;
+    margin: 0 0.5em;
 }
 
 #newnode,
@@ -155,8 +174,11 @@ html {
     display: none;
 }
 
-#loadbutton, #exportbutton {
-    margin-top: 0.3rem;
+hr {
+    border: none;
+    border-top: 1px dashed #bbb;
+    margin: 1.5rem 0;
+    opacity: 0.7;
 }
 
 #history {
@@ -189,9 +211,8 @@ html {
     font-weight: bold;
 }
 
-#feedback, #menu {
+#feedback {
     border-radius: 1.6rem;
-    background-color: rgb(255 255 255 / 70%);
     padding: 1.3rem 0.6rem;
     max-width: 22.5rem;
 }
